--- a/srcs/.env
+++ b/srcs/.env
@@ -10,3 +10,6 @@ MYSQL_USER=dbuser
 MYSQL_PASSWORD=1234
 FTP_USR=ftpuser
 FTP_PWD=ftppass
+
+# Add the .env file to .gitignore
+echo "srcs/.env" >> .gitignore
