--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.16
+FROM alpine:3.17
 
 ARG PHP_VERSION=8
 
@@ -31,4 +31,5 @@ RUN wget https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1
 
 EXPOSE 8080
 
-CMD	[ "php", "-S", "[::]:8080", "-t", "/var/www" ]
+# Use the full path to the PHP executable to avoid PATH issues
+CMD	[ "/usr/bin/php${PHP_VERSION}", "-S", "[::]:8080", "-t", "/var/www" ]
