--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -31,5 +31,4 @@ RUN wget https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1
 
 EXPOSE 8080
 
-# Use hardcoded path to PHP instead of variable
-CMD	[ "php", "-S", "[::]:8080", "-t", "/var/www" ]
+CMD ["/usr/bin/php", "-S", "0.0.0.0:8080", "-t", "/var/www"]
