--- a/srcs/.env
+++ b/srcs/.env
@@ -1,14 +1,20 @@
-DOMAIN_NAME=okapshai.42.fr
-CERT_=./requirements/tools/okapshai.42.fr.crt
-KEY_=./requirements/tools/okapshai.42.fr.key
-DB_NAME=wordpress
-DB_ROOT=rootpass
-DB_USER=wpuser
-DB_PASS=wppass
-MYSQL_ROOT_PASSWORD=123456
-MYSQL_USER=dbuser
-MYSQL_PASSWORD=1234
-FTP_USR=ftpuser
-FTP_PWD=ftppass
-PORTAINER_USER=admin
-PORTAINER_PASSWORD=admin123
+DOMAIN_NAME=
+
+CERT_=
+KEY_=
+
+WP_ADMIN_USER=
+WP_ADMIN_EMAIL=
+WP_ADMIN_PASSWORD=
+WP_SUBSCRIBER_USER=
+WP_SUBSCRIBER_EMAIL=
+WP_SUBSCRIBER_PASSWORD=
+
+DB_NAME=
+DB_ROOT=
+DB_USER=
+DB_PASS=
+
+MYSQL_ROOT_PASSWORD=
+MYSQL_USER=
+MYSQL_PASSWORD=
