--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,27 +1,57 @@
-server {
-    listen      443 ssl;
-    server_name  okapshai.42.fr www.okapshai.42.fr;
-    root    /var/www/;
-    index index.php;
-    ssl_certificate     /etc/nginx/ssl/okapshai.42.fr.crt;
-    ssl_certificate_key /etc/nginx/ssl/okapshai.42.fr.key;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_session_timeout 10m;
-    keepalive_timeout 70;
-    location / {
-        try_files $uri /index.php?$args;
-        add_header Last-Modified $date_gmt;
-        add_header Cache-Control 'no-store, no-cache';
-        if_modified_since off;
-        expires off;
-        etag off;
-    }
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass wordpress:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+worker_processes auto;
+
+pid /run/nginx.pid;
+
+include /etc/nginx/modules-enabled/*.conf;
+
+events {
+    worker_connections 1024;
+}
+
+http {
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048; 
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_stapling off;
+    
+    access_log /var/log/nginx/access.log; 
+    error_log /var/log/nginx/error.log;
+
+    server {
+        listen 443 ssl;
+        server_name okapshai.42.fr www.okapshai.42.fr;
+        root /var/www/html;
+        index index.php;
+
+        ssl_certificate /etc/nginx/ssl/okapshai.42.fr.crt;
+        ssl_certificate_key /etc/nginx/ssl/okapshai.42.fr.key;
+
+        location / {
+            try_files $uri $uri/ =404;
+        }
+
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass wordpress:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+        }
+       
+        location ~ /\.ht {
+            deny all;
+        }
     }
 }
